refactor: change html, js, update securityconfig, db for entities